# fast_firebirdsql

./: .env.example  .gitignore  CELEBRATION.md  Cargo.sync-conflict-20250727-205454-TEAUIQK.toml  Cargo.toml  FIREBIRDSQL_COMPATIBILITY.md  LICENSE  Makefile  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  README.md  README_WINDOWS.md  RENAME_SUMMARY.md  THIRD-PARTY-NOTICES.md  Tasks_2025-06-24T21-15-42.md  Tasks_2025-06-24T21-47-40.md  Tasks_2025-06-25T18-35-42.md  benchmark_suite.py  db_config.py  detailed_timing_analysis.py  optimize_max_query.py  performance_baseline.json  performance_comparison.py  performance_monitor.py  pyproject.sync-conflict-20250727-205454-TEAUIQK.toml  pyproject.toml  setup_windows_dlls.py  test_column_counting.py  test_comprehensive_types.py  test_connection_pooling.py  test_connection_type.rs  test_family_connection.py  test_firebirdsql_compatibility.py  test_imports.py  test_max_query_optimization.py  test_optimization_features.py  test_optimized_performance.py  test_type_conversion.py  test_type_conversion_performance.py  test_unlimited_columns.py  test_windows_updates.py
benchmarks/: benchmark_suite.py  compare_drivers.py  performance_comparison.py  performance_monitor.py  run_performance_tests.py
docs/: BUG-502-reopen-open-cursor.md  PERFORMANCE_TESTING.md  WINDOWS_UPDATE_FIX.md
scripts/: analyze_overhead_sources.py  debug_performance.py  debug_results.py  detailed_performance_analysis.py  detailed_timing_analysis.py  fast_firebirdsql_new_interface.py  fast_firebirdsql_test.py  firebirdsql_compatibility_demo.py  investigate_query_overhead.py  optimize_max_query.py  pure_python_sql.py
src/: lib.rs
tests/: test_bstools_connection.py  test_close_query_behavior.py  test_column_counting.py  test_commit_rollback.py  test_comprehensive_types.py  test_connection_close.py  test_connection_pooling.py  test_connection_reuse_performance.py  test_family_connection.py  test_firebirdsql_compatibility.py  test_imports.py  test_max_optimization_final.py  test_max_query_optimization.py  test_memory_management.py  test_migration.py  test_optimized_performance.py  test_query_optimization.py  test_rename.py  test_type_conversion.py  test_type_conversion_performance.py  test_unlimited_columns.py  test_update_fix.py  test_v0_2_0.py  test_windows_updates.py
tests/suite/: conftest.py  test_dbapi.py  test_module.py
windows-firebird/: fbclient.def  fbclient_clean.def
