[package]
name = "fast_firebirdsql"
version = "0.8.0"
edition = "2021"

[lib]
name = "fast_firebirdsql"
crate-type = ["cdylib"]

[dependencies]
rsfbclient = { version = "0.25.2", default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"] }
chrono = { version = "0.4", default-features = false }

[target.x86_64-pc-windows-gnu.dependencies]
rsfbclient = { version = "0.25.2", features = ["linking"] }

[target.x86_64-pc-windows-msvc.dependencies]
rsfbclient = { version = "0.25.2", features = ["linking"] }

[target.x86_64-unknown-linux-gnu.dependencies]
rsfbclient = { version = "0.25.2", features = ["linking"] }

[lints.clippy]
# pyo3 0.22's #[pymethods]/#[pyfunction] macro expansion triggers this lint
# on every wrapped method; it does not point at real code in this crate
useless_conversion = "allow"

# Build optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# panic = "unwind" (default): a Rust panic must not abort the whole
# Python process hosting this cdylib
strip = true

[profile.dev]
opt-level = 1

