[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast_firebirdsql"
version = "0.6.0"
description = "Fast Firebird database queries using Rust - firebirdsql compatible"
authors = [
    {name = "Janis Blechert", email = "janis@blechert.at"}
]
license = {text = "MIT"}
requires-python = ">=3.13"

[tool.pytest.ini_options]
# Only the pytest suite; the legacy print-based scripts in tests/ are not
# pytest-compatible (module-level DB access, no assertions)
testpaths = ["tests/suite"]

[tool.maturin]
features = ["pyo3/extension-module"]
# Include Windows DLLs and setup script in the wheel
include = [
    { path = "windows-firebird/fbclient.dll", format = "wheel" },
    { path = "windows-firebird/python313.dll", format = "wheel" },
    { path = "setup_windows_dlls.py", format = "wheel" }
]