[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast_firebirdsql"
version = "0.9.0"
description = "Fast Firebird database queries using Rust - firebirdsql compatible"
readme = "README.md"
authors = [
    {name = "Janis Blechert", email = "janis@blechert.at"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["firebird", "database", "driver", "dbapi", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/jblechert/fast_firebirdsql"
Issues = "https://github.com/jblechert/fast_firebirdsql/issues"

[tool.pytest.ini_options]
testpaths = ["tests/suite"]
markers = [
    "nodb: test runs without a reachable Firebird server",
]

[tool.maturin]
features = ["pyo3/extension-module"]
# Include Windows DLLs, setup script and third-party notices in the wheel
include = [
    { path = "windows-firebird/fbclient.dll", format = "wheel" },
    { path = "windows-firebird/python313.dll", format = "wheel" },
    { path = "setup_windows_dlls.py", format = "wheel" },
    { path = "THIRD-PARTY-NOTICES.md", format = "wheel" }
]